--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,1 +1,31 @@
-<p>header works!</p>
+<header class="container-fluid row">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand">Mi Página</a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" [routerLink]="['punto1']">Punto 1
+            </a>
+          </li>
+          <li class=" nav-item">
+            <a class="nav-link">Punto 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">Punto 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">Punto 4</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+</header>
