--- a/src/app/components/punto1/punto1/punto1.component.html
+++ b/src/app/components/punto1/punto1/punto1.component.html
@@ -1,12 +1,12 @@
-<div class="row">
-  <div class="col-md3">
+<div class="container mt-4">
+  <div class="row" id="slider">
+    <h2>{{noticia.detalle}}</h2>
     <figure>
       <img class="img-fluid" src="assets/{{noticia.img}}">
     </figure>
-
-    <h3>{{noticia.nombre}}</h3>
+  </div>
+  <div class="row" id="slider">
+    <button type="button" class="btn btn-outline-dark" (click)="anterior()">Anterior</button>
+    <button type="button" class="btn btn-outline-dark" (click)="siguiente()">Siguiente</button>
   </div>
 </div>
-
-<button (click)="anterior()">Anterior</button>
-<button (click)="siguiente()">Siguiente</button>
