correccion header y footer

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="container-fluid row">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-success">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <div class="container-fluid">
       <a class="navbar-brand">Mi Página</a>
 
@@ -11,11 +11,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" [routerLink]="['punto1']">Punto 1
+            <a class="nav-link" [routerLink]="['punto1']">Punto 1
             </a>
           </li>
           <li class=" nav-item">
-            <a class="nav-link">Punto 2</a>
+            <a class="nav-link" [routerLink]="['punto2']">Punto 2</a>
           </li>
           <li class="nav-item">
             <a class="nav-link">Punto 3</a>
