--- a/src/app/components/layout/footer/footer.component.css
+++ b/src/app/components/layout/footer/footer.component.css
@@ -2,7 +2,7 @@ footer {
   text-align: center;
   color: white;
   position: relative;
-  bottom: -45px;
+  bottom: 0;
   height: 100px;
   width: 100%;
   background-color: #375a7f;
