--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,3 +4,10 @@
   margin-right: 0;
   margin-left: 0;
 }
+
+.row {
+  padding-left: 0;
+  padding-right: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
