--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <app-header></app-header>
+  <app-header class="row col-12"></app-header>
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <app-footer class="row col-12"></app-footer>
 </div>
