--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -18,7 +18,7 @@
             <a class="nav-link" [routerLink]="['punto2']">Punto 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Punto 3</a>
+            <a class="nav-link" [routerLink]="['punto3']">Punto 3</a>
           </li>
         </ul>
       </div>
