arreglo de header

--- a/src/app/components/punto1/punto1.component.html
+++ b/src/app/components/punto1/punto1.component.html
@@ -1,3 +1,4 @@
+<app-header class="row col-12"></app-header>
 <div class="container mt-4">
   <div class="row" id="slider">
     <h2>{{noticia.detalle}}</h2>
@@ -10,3 +11,4 @@
     <button type="button" class="btn btn-outline-dark" (click)="siguiente()">Siguiente</button>
   </div>
 </div>
+<app-footer class="row col-12"></app-footer>
