--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,5 +1,4 @@
 <header class="container-fluid row">
-
   <nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <div class="container-fluid">
       <a class="navbar-brand">Mi Página</a>
@@ -11,14 +10,14 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['punto1']">Punto 1
+            <a class="nav-link" routerLink='/punto1'>Punto 1
             </a>
           </li>
           <li class=" nav-item">
-            <a class="nav-link" [routerLink]="['punto2']">Punto 2</a>
+            <a class="nav-link" routerLink='/punto2'>Punto 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['punto3']">Punto 3</a>
+            <a class="nav-link" routerLink='/punto3'>Punto 3</a>
           </li>
         </ul>
       </div>
