--- a/src/app/components/punto2/punto2/punto2.component.html
+++ b/src/app/components/punto2/punto2/punto2.component.html
@@ -1,3 +1,4 @@
+<app-header class="row col-12"></app-header>
 <div class="container col-sm-12">
   <div>
     <div class="row mb-5">
@@ -26,3 +27,4 @@
     </div>
   </div>
 </div>
+<app-footer class="row col-12"></app-footer>
