agregado de tablas

--- a/src/app/components/punto1/punto1.component.html
+++ b/src/app/components/punto1/punto1.component.html
@@ -7,8 +7,8 @@
     </figure>
   </div>
   <div class="row" id="slider">
-    <button type="button" class="btn btn-outline-dark" (click)="anterior()">Anterior</button>
-    <button type="button" class="btn btn-outline-dark" (click)="siguiente()">Siguiente</button>
+    <button type="button" class="btn btn-outline-dark me-2" (click)="anterior()">Anterior</button>
+    <button type="button" class="btn btn-outline-dark me-2" (click)="siguiente()">Siguiente</button>
   </div>
 </div>
 <app-footer class="row col-12"></app-footer>
