--- a/src/app/components/punto2/punto2/punto2.component.html
+++ b/src/app/components/punto2/punto2/punto2.component.html
@@ -1,4 +1,4 @@
-<app-header class="row col-12"></app-header>
+<app-header class="margin row col-12"></app-header>
 <div class="container col-sm-12">
   <div>
     <div class="row mb-5">
@@ -27,4 +27,4 @@
     </div>
   </div>
 </div>
-<app-footer class="row col-12"></app-footer>
+<app-footer class="margin row col-12"></app-footer>
