--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -17,7 +17,7 @@
             <a class="nav-link" routerLink='/punto2'>Punto 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink='/punto3'>Punto 3</a>
+            <a class="nav-link" routerLink='/punto3/-1'>Punto 3</a>
           </li>
         </ul>
       </div>
