--- a/src/app/components/punto2/punto2/punto2.component.css
+++ b/src/app/components/punto2/punto2/punto2.component.css
@@ -29,3 +29,10 @@
 #botones {
   margin-bottom: 45px;
 }
+
+.margin {
+  padding-left: 0;
+  padding-right: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
