--- a/src/app/components/punto3/punto3/punto3.component.html
+++ b/src/app/components/punto3/punto3/punto3.component.html
@@ -1,4 +1,4 @@
-<app-header class="margin row col-12"></app-header>
+<app-header class="row col-12"></app-header>
 <div class="container my-5">
   <div class="mx-auto col-6">
     <form method="post" id="formPasaje" #pasajeForm="ngForm">
@@ -52,7 +52,7 @@
 
 <!-- tabla -->
 <div class="row">
-  <div class="col-6">
+  <div class="col-8">
     <table datatable [dtOptions]="dtOptions" class="table table-success table-hover">
       <thead>
         <tr>
@@ -73,15 +73,17 @@
           <td>{{pasaje.fechaCompra | date:'longDate':'GMT-3':'es-AR'}}</td>
           <td>
             <button class="btn btn-warning me-2" [disabled]="desactivarPasaje(pasaje.idPasaje)"
-              (click)="editarPasaje(pasaje)"><i></i></button>
+              (click)="editarPasaje(pasaje)">Modificar</button>
             <button class="btn btn-danger" [disabled]="desactivarPasaje(pasaje.idPasaje)"
-              (click)="eliminarPasaje(pasaje)"><i></i></button>
+              (click)="eliminarPasaje(pasaje)">
+              Eliminar
+            </button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-  <div class="col-6 text-center">
+  <div class="col-4 text-center">
     <h3>Resumen de venta de pasajes</h3>
     <div class="my-3 table-responsive col-12">
       <table class="table table-dark table-hover">
@@ -102,4 +104,4 @@
     </div>
   </div>
 </div>
-<app-footer class="margin row col-12"></app-footer>
+<app-footer class="row col-12"></app-footer>
